--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -2,16 +2,16 @@
 
 % File names are changed quite often between tutorial so make them configurable at the top.
 % Please escape whitespaces except before and after / as a path separator.
-\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ 3.5.0\ Installer\ (64bit).exe}	
-\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.3.0\_Win64\_setup.exe}	
+\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ 3.5.3\ Installer\ (64bit).exe}	
+\newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.3.0-Win64.exe}	
 \newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.3-prerequisites-installer.exe}
 \newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-2.3/OpenMS-2.3-prerequisites-installer.exe/download}
 \newcommand{\WindowsDefaultPWizFolder}{C: / Program\ Files / OpenMS-2.3.0 / share / OpenMS / THIRDPARTY / pwiz-bin}
-\newcommand{\MacKnimeInstallerName}{Mac / knime\_3.5.0.app.macosx.cocoa.x86\_64.dmg}	
+\newcommand{\MacKnimeInstallerName}{Mac / knime\_3.5.3.app.macosx.cocoa.x86\_64.dmg}	
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.3.0-Darwin.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.com/analytics-platform/3.5}
 \newcommand{\KnimeTrustedSite}{http://update.knime.com/community-contributions/trusted/3.5}
-\newcommand{\KnimeTrunkSite}{http://update.knime.com/community-contributions/trunk}
+\newcommand{\KnimeTrunkSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/experimental/feature/msstats/}
 
 % enable this line if the internal OpenMS update site is used
 %\newcommand{\OpenMSSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/RC/}
