Smaller changes on the tables

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -122,6 +122,10 @@
 \usepackage{subcaption}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Nicer tables
+\usepackage{booktabs}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % boxes with notes
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{tikz}
@@ -204,6 +208,8 @@
 
 \newcommand{\KNIMENODE}[1]{\texttt{#1}}
 \newcommand{\OPENMSTOOL}[1]{\texttt{#1}}
+
+\newcommand*{\species}[1]{\textit{#1}}
 
 \usepackage{etoolbox} % simplified if / else checks in latex
 
